added external button code

--- a/lab2starter/lab2.build_log.htm
+++ b/lab2starter/lab2.build_log.htm
@@ -3,7 +3,38 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\Mario\Tron3TA4\lab2starter\lab2.uvproj
-Project File Date:  10/05/2015
+E:\School\Year3\3TA4\Tron3TA4\lab2starter\lab2.uvproj
+Project File Date:  10/04/2015
 
 <h2>Output:</h2>
+Build target 'lab2'
+compiling main.c...
+src\main.c(115): warning:  #940-D: missing return statement at end of non-void function "randomNumber"
+  }
+src\main.c: 1 warning, 0 errors
+linking...
+Program Size: Code=13048 RO-data=11192 RW-data=128 ZI-data=1088  
+FromELF: creating hex file...
+".\lab2.axf" - 0 Error(s), 1 Warning(s).
+Load "E:\\School\\Year3\\3TA4\\Tron3TA4\\lab2starter\\lab2.axf" 
+Erase Done.
+Programming Done.
+Verify OK.
+Load "E:\\School\\Year3\\3TA4\\Tron3TA4\\lab2starter\\lab2.axf" 
+Erase Done.
+Programming Done.
+Verify OK.
+Load "E:\\School\\Year3\\3TA4\\Tron3TA4\\lab2starter\\lab2.axf" 
+Error: Flash Download failed  -  Target DLL has been cancelled
+Load "E:\\School\\Year3\\3TA4\\Tron3TA4\\lab2starter\\lab2.axf" 
+Erase Done.
+Programming Done.
+Verify OK.
+stm32f4xx_syscfg.c...
+compiling stm32f4xx_tim.c...
+compiling stm32f4xx_flash.c...
+compiling stm32f429i_discovery.c...
+compiling stm32f429i_discovery_lcd.c...
+compiling stm32f429i_discovery_sdram.c...
+".\lab2.axf" - 1 Error(s), 1 Warning(s).
+Target not created
