--- a/lab1starter/lab1.build_log.htm
+++ b/lab1starter/lab1.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\Jesse\Desktop\Intro to STM32F4-Discovery.html\labs\lab1\lab1starter\lab1.uvproj
+E:\School\Year3\3TA4\Tron3TA4\lab1starter\lab1.uvproj
 Project File Date:  09/21/2015
 
 <h2>Output:</h2>
