--- a/lab3starter/lab3.build_log.htm
+++ b/lab3starter/lab3.build_log.htm
@@ -4,6 +4,23 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 E:\School\Year3\3TA4\Labs\lab3\lab3.uvproj
-Project File Date:  10/31/2015
+Project File Date:  11/02/2015
 
 <h2>Output:</h2>
+Build target 'lab3'
+compiling main.c...
+linking...
+Program Size: Code=13044 RO-data=11208 RW-data=152 ZI-data=1752  
+".\lab3.axf" - 0 Error(s), 0 Warning(s).
+Load "E:\\School\\Year3\\3TA4\\Labs\\lab3\\lab3.axf" 
+Erase Done.
+Programming Done.
+Verify OK.
+s
+".\lab3.axf" - 2 Error(s), 0 Warning(s).
+Target not created
+.
+Cannot Write to RAM for Flash Algorithms !
+Programming Failed!
+Error: Flash Download failed  -  "Cortex-M4"
+or: Flash Download failed  -  Could not load file 'E:\School\Year3\3TA4\Labs\lab3\lab3.axf'
